--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,18 +1,18 @@
-name: qrcode_scanner
-description: A new Flutter package project.
-version: 0.0.1
-publish_to: none
+name: qrcode_scanner_example
+description: Demonstrates the package's main functions.
+
+publish_to: 'none'
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
-  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  qr_code_scanner:
-    git:
-      url: https://github.com/kobe-rodrigoperozzo/qr_code_fork.git
+  cupertino_icons: ^1.0.2
+
+  qrcode_scanner:
+    path: ../
 
 dev_dependencies:
   flutter_test:
@@ -25,18 +25,23 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
-  # To add assets to your package, add an assets section, like this:
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
+  uses-material-design: true
+
+  # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # To add custom fonts to your package, add a fonts section here,
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
+
+  # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
@@ -53,5 +58,5 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/custom-fonts/#from-packages
